# buzzybis.web

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  LICENSE.md  README.md
tools/typst-watch/: Cargo.toml
tools/typst-watch/src/: build.rs  error.rs  main.rs  typst.rs
website/: Cargo.toml
website/assets/: home.css  lists.css  main.css  viewer.css
website/src/: eng.rs  error.rs  get_file_list.rs  main.rs  photo.rs
website/src/statics/: about.rs  mod.rs  svg.rs
