[workspace]
members = [
    "website",
    "tools/typst-watch",
]
resolver = "3"

[workspace.dependencies]
notify = "8.2.0"
walkdir = "2.5.0"
log = "0.4.29"
env_logger = "0.11.8"


[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
